--- a/assets/styles/components/footer.css
+++ b/assets/styles/components/footer.css
@@ -3,189 +3,207 @@
     color: #f7f5f5;
     padding: 50px 0;
   } */
-  footer {
-    /* background-color: rgba(222, 216, 216, 0.929); */
-    background-color: rgb(88, 151, 188);
-    color: #000000;
-    padding: 50px 0;
- 
+footer {
+  /* background-color: rgba(222, 216, 216, 0.929); */
+  background-color: rgb(88, 151, 188);
+  color: #000000;
+  padding: 50px 0;
+
 
 }
-   
-  
-  footer .logo_original_footer{
-    width: 150px;
-    height: 150px;
-    margin-left: 5%;
-
-  }
-  .footer-social i {
-    color: black;
-  }
-  
-  footer h3 {
-    font-size: 20px;
-    padding: 15px;
-  }
-  
-  .footer-content li a {
-    color: black;
-  
-  }
 
 
-  .footer-content {
-    width:60%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
+footer .logo_original_footer {
+  width: 150px;
+  height: 150px;
+  margin-left: 5%;
 
-  
-  }
-  
-  .footer-content li {
-    padding: 5px;
-  }
-  
-  
-  .footer-about a {
-    text-decoration: none;
-  }
-  .footer-about li i::before {
-    display: block;
-    width: 30px;
-    height: 30px;
-  }
-  .footer-contact li i::before {
-    display: block;
-    width: 30px;
-    height: 30px;
-  }
-  .footer-menu{
-    width:85vw;
-    margin: auto ;
-    display: block;
-    flex-wrap: wrap;
-    border-top: solid black 1px;
-  }
-  .footer-menu ul {
-    list-style: none;
-    padding: 30px 0 0 0;
-    display: flex;
-    justify-content: center;
-    margin-bottom: 20px;
-  
-  
-  }
-  
-  .footer-menu a {
-    color: #000000;
-    text-decoration: none;
-    padding: 0 5px;
-  }
-  
-  .footer-social {
-    padding-bottom: 50px;
-  }
-  
-  .footer-menu a:hover,
-  .footer-logo a:hover {
-    text-decoration: underline;
-  }
-  
-  .footer-social h3 {
-    text-align: center;
-  
-  }
-  
-  .footer-social ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
+}
 
-  }
-  
-  .footer-social li {
-    margin-right: 20px;
-  }
-  
-  .footer-social a {
-    color: #000000;
-    text-decoration: none;
-    font-size: 1.5rem;
-  }
-  
-  .footer-social a:hover {
-    text-decoration: underline;
-  }
-  
-  .footer-contact ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .footer-contact li {
+.footer-social i {
+  color: black;
+}
+
+footer h3 {
+  font-size: 20px;
+  padding: 15px;
+}
+
+.footer-content li a {
+  color: black;
+
+}
+
+
+.footer-content {
+  width: 60%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+
+
+}
+
+.footer-content li {
   padding: 5px;
-    display: flex;
-    align-items: center;
-  }
-  
-  /* .footer-contact i {
+}
+
+
+.footer-about a {
+  text-decoration: none;
+}
+
+.footer-about li i::before {
+  display: block;
+  width: 30px;
+  height: 30px;
+}
+
+.footer-contact li i::before {
+  display: block;
+  width: 30px;
+  height: 30px;
+}
+
+.footer-menu {
+  width: 85vw;
+  margin: auto;
+  display: block;
+  flex-wrap: wrap;
+  border-top: solid black 1px;
+}
+
+.footer-menu ul {
+  list-style: none;
+  padding: 30px 0 0 0;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+
+
+}
+
+.footer-menu a {
+  color: #000000;
+  text-decoration: none;
+  padding: 0 5px;
+}
+
+.footer-social {
+  padding-bottom: 50px;
+}
+
+.footer-menu a:hover,
+.footer-logo a:hover {
+  text-decoration: underline;
+}
+
+.footer-social h3 {
+  text-align: center;
+
+}
+
+.footer-social ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+
+}
+
+.footer-social li {
+  margin-right: 20px;
+}
+
+.footer-social a {
+  color: #000000;
+  text-decoration: none;
+  font-size: 1.5rem;
+}
+
+.footer-social a:hover {
+  text-decoration: underline;
+}
+
+.footer-contact ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.footer-contact li {
+  padding: 5px;
+  display: flex;
+  align-items: center;
+}
+
+/* .footer-contact i {
     font-size: 1.5rem;
     margin-right: 10px;
   } */
-  
-  
-  .copyright {
-    text-align: center;
-    font-size: 15px;
-  }
-  
-  
-  .top_footer{
-    display: flex;
-    justify-content: right;
-    align-items: baseline;
-    width: 90vw;
-  
-  
+
+
+.copyright {
+  text-align: center;
+  font-size: 15px;
+}
+
+
+.top_footer {
+  display: flex;
+  justify-content: right;
+  align-items: baseline;
+  width: 90vw;
+
+
+}
+
+
+
+@media screen and (max-width: 800px) {
+  .footer-content {
+    flex-direction: column;
+    display: block;
+    margin: auto;
   }
 
-  
-  
-  @media screen and (max-width: 800px) {
-    .footer-content {
-      flex-direction: column;
-    }
-  footer h3 {
-    text-align:center ;
+  .footer-content img {
+    display: block;
+    margin: auto;
   }
-  
-    .footer-menu,
-    .footer-social,
-    .footer-contact {
-      margin-top: 20px;
-    }
-    .footer-contact,.footer-about{
-  display: block;
-  margin: auto;
-    }
-  
-    .footer-menu ul{
-      display: flex;
-      flex-direction: column;
-      text-align: center;
-    
-    }
-    .footer-menu ul li{
+
+  footer h3 {
+    text-align: center;
+  }
+
+  .footer-menu,
+  .footer-social,
+  .footer-contact {
+    margin-top: 20px;
+  }
+
+  .footer-contact,
+  .footer-about {
+    display: block;
+    margin: auto;
+  }
+
+  .footer-menu ul {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+
+  }
+
+  .footer-menu ul li {
     margin-bottom: 20px;
-    
-    }
-    .separateur{
-      display: none;
-  
-    }}
+
+  }
+
+  .separateur {
+    display: none;
+
+  }
+}
