--- a/templates/condition/mentions_legales.html.twig
+++ b/templates/condition/mentions_legales.html.twig
@@ -11,36 +11,33 @@
                 <div class="menu-lien-utiles">
                     <ul>
                         <li>
-                            <a href="mentions_legales.html">Mentions légales</a>
-                        </li>
-                        <li>
-                            <a href="confidantialite.html">Politique de confidentialité</a>
-                        </li>
-                        <li>
-                            <a href="cgu.html">
-                                Conditions générales d'utilisation
+                            <a href="{{ path('app_mentions_legales') }}">
+                                Mentions légales
                             </a>
                         </li>
-                    
                         <li>
-                            <a href="cookies.html">Cookies</a>
+                            <a href="{{ path('app_politique_confidentialite') }}">Politique de confidentialité</a>
                         </li>
-                    
-                     
+                        <li>
+                            <a href="{{ path('app_conditions_generales') }}">Conditions générales d'utilisations</a>
+                        </li>
+                        <li>
+                            <a href="{{ path('app_cookie') }}">Cookies</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="container-conditions">
 
                     <h1>Mentions légales</h1>
                     <h2>1. Informations légales</h2>
-                    <p>Raison sociale : [Nom de la société]</p>
+                    <p>Raison sociale : One World</p>
                     <p>Adresse : [Adresse de la société]</p>
                     <p>Numéro de téléphone : [Numéro de téléphone]</p>
-                    <p>Email : [Adresse email]</p>
+                    <p>Email : shakoorfida@exemple.com</p>
                     <h2>2. Directeur de publication</h2>
-                    <p>[Nom du directeur de publication]</p>
+                    <p>Shakoor Fida</p>
                     <h2>3. Hébergeur</h2>
-                    <p>[Nom de l'hébergeur]</p>
+                    <p>Hébergeur : Hostinger</p>
                     <p>Adresse : [Adresse de l'hébergeur]</p>
                     <h2>4. Propriété intellectuelle</h2>
                     <p>Tous les contenus présents sur ce site (textes, images, vidéos, logos, etc.) sont protégés par
