--- a/templates/include/_flashes.html.twig
+++ b/templates/include/_flashes.html.twig
@@ -8,9 +8,9 @@
                             <i class="fa fa-thumbs-up"></i>
                         </span>
                     {% else %}
-                        <span class="alert-inner--icon">
+                        {# <span class="alert-inner--icon">
                             <i class="fa fa-thumbs-down"></i>
-                        </span>
+                        </span> #}
                     {% endif %}
                     <span class="alert-inner--text">
                         <strong>{{ label|title }}:</strong>
