--- a/templates/include/_nav.html.twig
+++ b/templates/include/_nav.html.twig
@@ -2,7 +2,7 @@
 <div class="nav-top">
 	<ul>
 		<li>
-			<a href="{{ path('show_home') }}"><img class="single-logo" src="" alt=""></a>
+			<a href="{{ path('show_home') }}"><img class="single-logo" src="{{ asset('images/logo-white-no-bg.png') }}" alt="logo-one_world"></a>
 		</li>
 		<li id="burger">
 			<i class="fa-solid fa-bars"></i>
