--- a/templates/user/register_form.html.twig
+++ b/templates/user/register_form.html.twig
@@ -25,8 +25,8 @@
 
 						</div>
 						<div class="block-input">{{form_row(form.password)}}</div>
-				
-						<input class="btn_register" type="submit" value="Inscription">
+<p class="block_condition_form">En vous inscrivant, vous acceptez les <a href="">Conditions d'utilisation </a> et la <a href="">Politique de confidentialité</a>, notamment <a href="">l'Utilisation des cookies</a>.</p>
+						
 						{{form_end(form)}}
 					</form>
 				</div>
