--- a/assets/styles/components/home.css
+++ b/assets/styles/components/home.css
@@ -173,34 +173,38 @@ main #container_spirit {
 
 /*--------------------SECTION BG + DIV (SPIRIT)-----------------------*/
 
-
 .block_description {
-    background-color: rgb(255, 255, 255);
-    width: 40%;
-    min-height: 80%;
-    margin-left: 10%;
-    text-align: center;
-    margin-top: 50px;
-
+  background-color: rgb(255, 255, 255);
+  width: 80%;
+  max-width: 800px;
+  margin: 50px auto;
+  padding: 20px;
+  text-align: center;
 }
 
-
 .block_description p {
-    font-size: 20px;
-
+  font-size: 20px;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
 
 main #container_spirit {
-    background-image: url(/public/images/beaux-villas-eau-dans-ile-maldives-tropicales-au-lever-du-soleil.jpg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    display: flex;
-    align-items: center;
-    min-height: 80vh;
-    width: 100vw;
-
+  background-image: url(/public/images/beaux-villas-eau-dans-ile-maldives-tropicales-au-lever-du-soleil.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 80vh;
+  display: flex;
+  align-items: center;
 }
+
+@media (max-width: 768px) {
+  .block_description {
+    width: 90%;
+    margin: 30px auto;
+  }
+}
+
 
 
 /*--------------------SECTION derniers articles-----------------------*/
@@ -358,4 +362,25 @@ main #container_spirit {
     color: #fff;
     padding: 5px 15px;
     border-radius: 5px;
+}
+
+
+
+
+.container_flex {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+@media screen and  (max-width: 850px) {
+    .container_flex {
+        display: flex;
+      flex-direction:column ;
+    }
+    .block-description {
+
+    width: 85%;
+     margin-bottom: 40px;
+    }
 }
