--- a/templates/admin/show_dashboard.html.twig
+++ b/templates/admin/show_dashboard.html.twig
@@ -1,13 +1,19 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Admin - Tableau de bord
-{% endblock %}
+{% block title %}Admin - Tableau de bord{% endblock %}
 
 {% block body %}
-<nav class='navdashboard'>
+   
 
 </nav>
-	
+	 {# Afficher les messages flash en haut de la page #}
+    {% block flash_messages %}
+        {% for type, messages in app.flashes %}
+            {% for message in messages %}
+                <div class="alert alert-{{ type }}">{{ message }}</div>
+            {% endfor %}
+        {% endfor %}
+    {% endblock %}
 		<h1 class="title_dashboard">Tableau de bord</h1>
 
 		<section class="container_table">
@@ -59,39 +65,46 @@
 				<h2 class="text-center">Tous les articles</h2>
 				<table>
 					<thead>
-						<tr>
-							<th>#</th>
-							<th>Titre</th>
-							<th>Description</th>
-							<th>Image</th>
-							<th>Créée le</th>
-							<th>Actions</th>
-						</tr>
-					</thead>
-					<tbody>
-						{% for article in articles %}
-							<tr class="text-center align-middle">
-								<td>{{ article.id }}</td>
-								<td>{{ article.title | length > 20 ? article.title[:20] ~ '...' : article.title }}</td>
-								<td>{{ article.content }}</td>
-								<td>
-									<div class="block_img_table">
-										<img src="{{ asset('uploads/' ~ article.image) }}" alt="{{ article.title }}">
-									</div>
-								</td>
-								<td>{{ article.createdAt | date('d/m/Y') }}</td>
-								<td>
-									<a href="{{ path('update_article', {'id': article.id}) }}" class="" title="Modifier">
-										<i class="fa-sharp fa-solid fa-pen-to-square" style="color: #3fb116;"></i>
-
-									</a>
-									<a href="{{ path('hard_delete_article', {'id': article.id}) }}" class="" title="Supprimer">
-										<i class="fa-solid fa-trash" style="color: #f02000;"></i>
-									</a>
-								</td>
-							</tr>
-						{% endfor %}
-					</tbody>
+    <tr>
+        <th>#</th>
+        <th>Titre</th>
+        <th>Description</th>
+        <th>Contenu</th>
+        <th>Image principale</th>
+        <th>Deuxième image</th>
+        <th>Créée le</th>
+        <th>Actions</th>
+    </tr>
+</thead>
+<tbody>
+    {% for article in articles %}
+        <tr class="text-center align-middle">
+            <td>{{ article.id }}</td>
+            <td>{{ article.title | length > 20 ? article.title[:20] ~ '...' : article.title }}</td>
+            <td>{{ article.content }}</td>
+            <td>{{ article.content2 }}</td>
+            <td>
+                <div class="block_img_table">
+                    <img src="{{ asset('uploads/' ~ article.image) }}" alt="{{ article.title }}">
+                </div>
+            </td>
+            <td>
+                <div class="block_img_table">
+                    <img src="{{ asset('uploads/' ~ article.image2) }}" alt="{{ article.title }}">
+                </div>
+            </td>
+            <td>{{ article.createdAt | date('d/m/Y') }}</td>
+            <td>
+                <a href="{{ path('update_article', {'id': article.id}) }}" class="" title="Modifier">
+                    <i class="fa-sharp fa-solid fa-pen-to-square" style="color: #3fb116;"></i>
+                </a>
+                <a href="{{ path('hard_delete_article', {'id': article.id}) }}" class="" title="Supprimer">
+                    <i class="fa-solid fa-trash" style="color: #f02000;"></i>
+                </a>
+            </td>
+        </tr>
+    {% endfor %}
+</tbody>
 				</table>
 			</div>
 		</section>
