--- a/templates/condition/conditions_generales.html.twig
+++ b/templates/condition/conditions_generales.html.twig
@@ -1,20 +1,73 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ConditionController!{% endblock %}
+{% block title %}Conditions générales d'utilisation{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <main class="main-cgu">
+        <section>
+            <div class="block-general-adm">
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/DORANCO/Projet_website_doranco/One_world/src/Controller/ConditionController.php'|file_link(0) }}">src/Controller/ConditionController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/DORANCO/Projet_website_doranco/One_world/templates/condition/index.html.twig'|file_link(0) }}">templates/condition/index.html.twig</a></code></li>
-    </ul>
-</div>
+              <div class="menu-lien-utiles">
+                <ul>
+                    <li>
+                        <a href="{{ path('app_mentions_legales') }}">
+                            Mentions légales
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{{ path('app_politique_confidentialite') }}">Politique de confidentialité</a>
+                    </li>
+                    <li>
+                        <a href="{{ path('app_conditions_generales') }}">Conditions générales d'utilisation</a>
+                    </li>
+                    <li>
+                        <a href="{{ path('app_cookie') }}">Cookies</a>
+                    </li>
+                </ul>
+            </div>
+                <div class="container-conditions">
+
+                    <h1>Conditions générales d'utilisation</h1>
+                    <p>Bienvenue sur notre site de blog de voyage One World. Veuillez lire attentivement les conditions
+                        générales d'utilisation (ci-après dénommées "CGU") avant d'utiliser notre site. En utilisant
+                        notre site, vous acceptez d'être lié par ces CGU. Si vous n'acceptez pas ces CGU, veuillez ne
+                        pas utiliser notre site.</p>
+                    <h2>1. Utilisation du site</h2>
+                    <p>1.1 Vous êtes autorisé à accéder et à utiliser notre site à des fins personnelles et non
+                        commerciales.</p>
+                    <p>1.2 Vous vous engagez à utiliser notre site de manière responsable et légale. Vous ne pouvez pas
+                        publier de contenu offensant, obscène, diffamatoire, frauduleux, discriminatoire ou illégal.</p>
+                    <p>1.3 Vous êtes responsable de toutes les informations que vous publiez sur notre site et vous
+                        acceptez de respecter les droits d'auteur et les droits de propriété intellectuelle.</p>
+                    <h2>2. Propriété intellectuelle</h2>
+                    <p>2.1 Tous les contenus présents sur notre site, y compris les articles, les images et les vidéos,
+                        sont protégés par les lois relatives à la propriété intellectuelle et appartiennent à leur
+                        propriétaire respectif.</p>
+                    <p>2.2 Vous ne pouvez pas copier, modifier, distribuer, vendre ou exploiter de quelque manière que
+                        ce soit le contenu de notre site sans notre autorisation préalable écrite.</p>
+                    <h2>3. Confidentialité</h2>
+                    <p>3.1 Nous collectons et utilisons vos données personnelles conformément à notre politique de
+                        confidentialité. En utilisant notre site, vous consentez à la collecte et à l'utilisation de
+                        vos données personnelles conformément à notre politique de confidentialité.</p>
+                    <p>3.2 Vous êtes responsable de la confidentialité de vos informations de compte et de votre mot de
+                        passe. Vous ne devez pas partager votre compte avec d'autres personnes.</p>
+                    <h2>4. Responsabilité</h2>
+                    <p>4.1 Nous nous efforçons de fournir des informations exactes et à jour sur notre site, mais nous
+                        ne pouvons garantir leur exactitude, leur exhaustivité ou leur pertinence.</p>
+                    <p>4.2 Nous déclinons toute responsabilité en cas de dommages directs ou indirects résultant de
+                        l'utilisation de notre site ou de l'impossibilité d'y accéder.</p>
+                    <h2>5. Modifications des CGU</h2>
+                    <p>5.1 Nous nous réservons le droit de modifier ces CGU à tout moment. Les modifications prendront
+                        effet dès leur publication sur le site.</p>
+                    <p>5.2 Il vous incombe de vérifier régulièrement les CGU pour prendre connaissance des éventuelles
+                        modifications. Votre utilisation continue du site après la publication des modifications
+                        constitue votre acceptation de ces modifications.</p>
+                </div>
+            </div>
+
+        </section>
+
+    </main>
+
 {% endblock %}
