--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -7,9 +7,11 @@
 	<div class="block_form">
 		<div class="formular">
 			<form method="post">
-				{% if error %}
-					<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-				{% endif %}
+			{% if error %}
+<div class="alert alert-danger">{{ error.message|trans({}, 'security') }}</div>
+
+{% endif %}
+
 				{% include 'include/_flashes.html.twig' %}
 				{% if app.user %}
 					<div class="mb-3">
@@ -17,6 +19,12 @@
 						<a href="{{ path('app_logout') }}">Logout</a>
 					</div>
 				{% endif %}
+				{% for flashMessage in app.flashes('success') %}
+						<div class="alert alert-success">
+							{{ flashMessage }}
+						</div>
+					{% endfor %}
+				
 				<h3>Connectez-vous</h3>
 				<hr>
 
